Hiệu chỉnh Icon và ảnh vẽ AI trên trang chủ

--- a/web/src/main/webapp/WEB-INF/templates/fragments/home/NavbarForIntro.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/home/NavbarForIntro.html
@@ -10,7 +10,7 @@
 			<li class="nav-item"><a class="nav-link" href="#section1">Quản
 					lý danh sách khách hàng</a></li>
 			<li class="nav-item"><a class="nav-link" href="#section2">Quản
-					lý mua hàng</a></li>
+					lý bán hàng</a></li>
 			<li class="nav-item"><a class="nav-link" href="#section3">Chăm
 					sóc khách hàng</a></li>
 			<li class="nav-item"><a class="nav-link" href="#section4">KPI</a>
