Sửa giao diện phần interaction

--- a/web/src/main/webapp/WEB-INF/templates/customerInteraction.html
+++ b/web/src/main/webapp/WEB-INF/templates/customerInteraction.html
@@ -5,8 +5,6 @@
 <th:block th:include="fragments/head"></th:block>
 <th:block th:include="fragments/common_css"></th:block>
 
-<th:block th:include="fragments/head"></th:block>
-
 <link rel="stylesheet" type="text/css" th:href="@{/resources/css/new_style.css}">
 <link rel="stylesheet" type="text/css" th:href="@{/resources/css/buttonGroupFunction.css}">
 	
@@ -59,7 +57,7 @@
 				<table id="table"
 					class="table table-bordered table-striped table-hover">
 					<thead class="thead">
-						<tr class="bg bg-success">
+						<tr class="bg">
 							<th class="col-stt th1">STT</th>
 							<th class="col-name th2">Tên khách hàng</th>
 							<th class="col-email th3">Email</th>
