--- a/web/src/main/webapp/WEB-INF/templates/fragments/frg_CustomerDetail.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/frg_CustomerDetail.html
@@ -22,9 +22,7 @@
 				<div class="left-panel">
 					<div class="user-info">
 						<div class="user-avatar">
-							<img
-								th:src="@{/resources/app-assets/images/portrait/small/avatar-s-10.png}"
-								alt="User Avatar">
+							<img th:src="@{/resources/app-assets/images/portrait/small/avatar-s-10.png}" alt="User Avatar">
 						</div>
 						<div class="user-details">
 							<h2 th:text="${customer.companyName}"></h2>
@@ -35,43 +33,23 @@
 
 					<div class="actions">
 						<a th:href="@{newEditCustomer(id=${customer.id})}" >
-						    <button type="button"
-						    	style="cursor: pointer;">
-						    Edit
-						    </button>
+						    <button type="button" style="cursor: pointer;">Edit</button>
 						</a>
 						<button style="cursor: pointer; background: #DA4453" th:onclick="'deleteCustomer(' + ${customer.id} + ')'">Delete</button>
 					</div>
 
-					<!-- <div class="relationship-section">
-					<label for="relationship">Trạng thái:</label>
-					<ul>
-						Lặp qua danh sách trạng thái
-						<li th:each="status : ${customer.statuses}"
-							th:text="${status.name}"></li>
-					</ul>
-
-				</div> -->
-
 					<div class="person-in-charge">
-						<label class="label-bold" for="person-in-charge">Người phụ
-							trách:</label> <select id="person-in-charge">
+						<label class="label-bold" for="person-in-charge">Người phụ trách:</label> 
+						<select id="person-in-charge">
 							<option value="ngan">Nguyễn Hoàng Phương Ngân</option>
 							<option value="other">Khác</option>
 						</select>
 					</div>
 
 					<div class="creation-info">
-						<p>
-							<span class="label-bold">Ngày tạo:</span> 9/8/2024 9:00
-						</p>
-						<p>
-							<span class="label-bold">Người tạo:</span> Nguyễn Hoàng Phương
-							Ngân
-						</p>
-						<p>
-							<span class="label-bold">Đã mua:</span> 0 lần
-						</p>
+						<p><span class="label-bold">Ngày tạo:</span>9/8/2024 9:00</p>
+						<p><span class="label-bold">Người tạo:</span>Nguyễn Hoàng Phương Ngân</p>
+						<p><span class="label-bold">Đã mua:</span>0 lần</p>
 					</div>
 				</div>
 
