thêm các link tới khách hàng và đơn hàng

--- a/web/src/main/webapp/WEB-INF/templates/fragments/home/content.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/home/content.html
@@ -86,7 +86,7 @@
 								<p class="text-center">Nắm bắt toàn bộ thông tin về khách
 									hàng, lịch sử giao dịch, tương tác, giá trị hợp đồng,.. duy
 									nhất trên 1 nền tảng</p>
-								<a href="#" class=" learn-more">Xem ngay →</a>
+								<a href="customer/list" class=" learn-more">Xem ngay →</a>
 							</div>
 						</div>
 
@@ -96,7 +96,7 @@
 								<h5 class="text-center">Quản lý hành trình khách hàng</h5>
 								<p class="text-center">Xây dựng hành trình trải nghiệm khách
 									hàng từ lúc tiếp nhận đến chăm sóc Trước - Trong - Sau bán.</p>
-								<a href="#" class="learn-more">Xem ngay →</a>
+								<a href="customer/list" class="learn-more">Xem ngay →</a>
 							</div>
 						</div>
 
@@ -106,7 +106,7 @@
 								<h5 class="text-center">Đo lường tỷ lệ chuyển đổi</h5>
 								<p class="text-center">Ghi nhận khả năng và hiệu quả chuyển
 									đổi từ các kênh khác nhau</p>
-								<a href="#" class="learn-more">Xem ngay →</a>
+								<a href="customer/list" class="learn-more">Xem ngay →</a>
 							</div>
 						</div>
 
@@ -117,7 +117,7 @@
 								<p class="text-center">Tích hợp các kênh bán hàng trên mạng
 									xã hội (Fanpage & Zalo OA) với hệ thống CRM, lưu trữ và quản lý
 									thông tin khách hàng</p>
-								<a href="#" class="learn-more">Xem ngay →</a>
+								<a href="customer/list" class="learn-more">Xem ngay →</a>
 							</div>
 						</div>
 					</div>
@@ -141,7 +141,7 @@
 								<p class="text-center">Nắm bắt trạng thái từng đơn hàng, từ
 									tạo mới đến hoàn thành, giúp bạn quản lý dễ dàng và chính
 									xác...</p>
-								<a href="#" class=" learn-more">Xem ngay →</a>
+								<a href="orders/list" class=" learn-more">Xem ngay →</a>
 							</div>
 						</div>
 
@@ -151,7 +151,7 @@
 								<h5 class="text-center">Quản lý nhà cung cấp</h5>
 								<p class="text-center">Lưu trữ thông tin, giao dịch và lịch
 									sử hợp tác với nhà cung cấp trên một nền tảng duy nhất...</p>
-								<a href="#" class="learn-more">Xem ngay →</a>
+								<a href="orders/list" class="learn-more">Xem ngay →</a>
 							</div>
 						</div>
 
@@ -161,7 +161,7 @@
 								<h5 class="text-center">Kiểm soát chi phí</h5>
 								<p class="text-center">Theo dõi và phân tích chi phí, đảm
 									bảo hiệu quả tài chính trong hoạt động mua hàng...</p>
-								<a href="#" class="learn-more">Xem ngay →</a>
+								<a href="orders/list" class="learn-more">Xem ngay →</a>
 							</div>
 						</div>
 
@@ -171,7 +171,7 @@
 								<h5 class="text-center">Tích hợp quy trình</h5>
 								<p class="text-center">Kết nối chặt chẽ với các bộ phận như
 									kho hàng, kế toán, giúp đồng bộ hóa dữ liệu nhanh chóng...</p>
-								<a href="#" class="learn-more">Xem ngay →</a>
+								<a href="orders/list" class="learn-more">Xem ngay →</a>
 							</div>
 						</div>
 					</div>
