Refractor code Search Customer of Son and Ngan. Change Delete Customer into Hide Customer to ensure data integrity.

--- a/web/src/main/webapp/WEB-INF/templates/customerDetail.html
+++ b/web/src/main/webapp/WEB-INF/templates/customerDetail.html
@@ -74,7 +74,7 @@
 						    Edit
 						    </button>
 						</a>
-						<button style="cursor: pointer; background: #DA4453" th:onclick="'deleteCustomer(' + ${customer.id} + ')'">Delete</button>
+						<button style="cursor: pointer; background: #DA4453" th:onclick="'hideCustomer(' + ${customer.id} + ')'">Hide</button>
 					</div>
 					
 
