--- a/web/src/main/webapp/WEB-INF/templates/fragments/buttonGroupFunction.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/buttonGroupFunction.html
@@ -12,7 +12,7 @@
 				<button type="button" class="btn-btnGroupFunction" id="UpdateStatusCustomerBtn" data-bs-toggle="modal" data-bs-target="#updateStatusCustomerModal">
 					Cập nhật trạng thái
 				</button>
-				<button type="button" class="btn-btnGroupFunction" id="deleteBtn">Xóa Nhiều</button>
+				<button type="button" class="btn-btnGroupFunction" id="deleteBtn">Ẩn khách hàng</button>
 				<button type="button" class="btn-btnGroupFunction">Gửi Email</button>
 				<button type="button" class="btn-btnGroupFunction">Gửi SMS</button>
 				<button type="button" class="btn-btnGroupFunction">Tạo Cơ Hội</button>
@@ -90,10 +90,10 @@
 	        <h5 class="modal-title">Thông báo xác nhận</h5>
 	      </div>
 	      <div class="modal-body">
-	        <p>Bạn có chắc chắn muốn xóa?</p>
+	        <p>Bạn có chắc chắn muốn ẩn khách hàng?</p>
 	      </div>
 	      <div class="modal-footer">
-	        <button type="button" id="confirmDeleteBtn" class="btn btn-primary modal-btn">Xóa</button>
+	        <button type="button" id="confirmHideBtn" class="btn btn-primary modal-btn">Ẩn</button>
 	        <button type="button" id="cancelBtn" class="btn btn-secondary modal-btn" data-dismiss="modal">Hủy bỏ</button>
 	      </div>
 	    </div>
