--- a/web/src/main/webapp/WEB-INF/templates/fragments/frg_ModalConfirmation.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/frg_ModalConfirmation.html
@@ -5,10 +5,10 @@
         <h5 class="modal-title">Thông báo xác nhận</h5>
       </div>
       <div class="modal-body">
-        <p>Bạn có chắc chắn muốn xóa?</p>
+        <p>Bạn có chắc chắn muốn ẩn?</p>
       </div>
       <div class="modal-footer">
-        <button type="button" id="confirmDeleteBtn" class="btn btn-primary modal-btn">Xóa</button>
+        <button type="button" id="confirmHideBtn" class="btn btn-primary modal-btn">Ẩn</button>
         <button type="button" id="cancelBtn" class="btn btn-secondary modal-btn" data-dismiss="modal">Hủy bỏ</button>
       </div>
     </div>
