--- a/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
@@ -11,7 +11,7 @@
                   <li class="active" data-menu=""><a class="dropdown-item" th:href="@{/customer/newEditCustomer}" data-toggle="dropdown">New</a></li>
                   <li class="active" data-menu=""><a class="dropdown-item" th:href="@{/customer/list}" data-toggle="dropdown">List</a></li>
                   <li class="active" data-menu=""><a class="dropdown-item" th:href="@{/customer/interact}" data-toggle="dropdown">Interaction</a></li>  
-                  <li class="active" data-menu=""><a class="dropdown-item" th:href="@{/customer-list-son}" data-toggle="dropdown">Search (Son)</a></li>
+                  <li class="active" data-menu=""><a class="dropdown-item" th:href="@{/customer/list}" data-toggle="dropdown">Search (Son)</a></li>
                   <li class="active" data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">Care</a></li>
                 </ul>
             </li>
