--- a/web/src/main/webapp/WEB-INF/templates/fragments/frg_customerListCRMScreen.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/frg_customerListCRMScreen.html
@@ -181,7 +181,8 @@
 												<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 												  <div class="modal-dialog modal-lg">
 												    <div class="modal-content">
-												    <form action="/crm-web/customer-list-search-son" method="get">
+												    <!-- <form action="/crm-web/customer-list-search-son" method="get"> -->
+												   	<form th:action="@{/customer/customer-list-search-son}" method="get">
 												      <div class="modal-header">
 												        <h1 class="modal-title fs-5" id="staticBackdropLabel">Tìm kiếm</h1>
 												        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
