thêm Pricing.html cho

--- a/web/src/main/webapp/WEB-INF/templates/fragments/home/footerForIntro.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/home/footerForIntro.html
@@ -74,7 +74,7 @@
               <a href="http://localhost:8080/crm-web/feedback" class="text-dark">Giới thiệu tính năng</a>
             </p>
             <p>
-              <a href="http://localhost:8080/crm-web/feedback" class="text-dark">Báo giá</a>
+              <a href="http://localhost:8080/crm-web/Pricing" class="text-dark">Báo giá</a>
             </p>
             <p>
               <a href="http://localhost:8080/crm-web/feedback" class="text-dark">Phản hồi</a>
