update Hide Customer for Interaction Screen (fragments/frg_CustomerDetail.html) and update file data_demo_interaction_v4.sql

--- a/web/src/main/webapp/WEB-INF/templates/fragments/frg_CustomerDetail.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/frg_CustomerDetail.html
@@ -38,7 +38,7 @@
 						    Edit
 						    </button>
 						</a>
-						<button style="cursor: pointer; background: #DA4453" th:onclick="'hideCustomer(' + ${customer.id} + ')'">Hide</button>
+						<button style="cursor: pointer; background: #DA4453" th:onclick="'hideCustomer_Interaction(' + ${customer.id} + ')'">Hide</button>
 					</div>
 					
 					
@@ -65,7 +65,7 @@
 
 		</div>
 	</div>
-	
+	<th:block th:include="fragments/frg_ModalConfirmation"></th:block>
 	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/deleteCustomer.js}" defer></script>
 
 	<!-- END CONTENT -->
