Nâng cấp giao diện

--- a/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen_Hansontable.html
+++ b/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen_Hansontable.html
@@ -41,7 +41,7 @@
 	<!-- END LEFT MENU NAVIGATION -->
 
 	<!--  BEGIN CONTENT -->
-	<div class="app-content content">
+	<div>
 	
 		<!-- BEGIN CONTENT WRAPPER -->
 		<th:block th:include="fragments/ordersContentWrapperCRM"></th:block>
