--- a/web/src/main/webapp/WEB-INF/templates/fragments/createOrderModal.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/createOrderModal.html
@@ -1,216 +1,272 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+<link
+	href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css"
+	rel="stylesheet" />
+<script
+	src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+<script
+	src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 </head>
 <body>
 	<div id="createOrderModal">
 		<!-- <h3>ID của đơn hàng <span id="orderIdUpdate"></span></h3> -->
-		<h3 id="title">Tạo mới đơn hàng </h3>
+		<h3 id="title">Tạo mới đơn hàng</h3>
 		<div class="closeBtnDiv" style="text-align: right;">
-			<button onclick="closeModal()" class="closeBtn"><i class="fas fa-times"></i></button>
+			<button onclick="closeModal()" class="closeBtn">
+				<i class="fas fa-times"></i>
+			</button>
 		</div>
 		<hr>
-	    <form id="orderCreateForm"  action="create-order" method="post">
-		    <div class="form-row" style = "margin-bottom: -30px">
-			    <div class="form-group col-md-6">
-			      <label for="inputDate">Ngày tạo</label>
-			      <input type="date" class="form-control" id="orderCreateDateCreate" style="background-color: white; color: black; width: 100%;" placeholder="dd/mm/yyyy" required >
-			    </div>
-			    <div class="form-group col-md-6">
-			      <label for="inputDate">Ngày giao</label>
-			      <input type="date" class="form-control" id="orderDeliveryDateCreate" style="background-color: white; color: black; width: 100%;" placeholder="yyyy/mm/dd" required >
-			    </div>
+		<form id="orderCreateForm" action="create-order" method="post">
+			<div class="form-row" style="margin-bottom: -30px">
+				<div class="form-group col-md-6">
+					<label for="inputDate">Ngày tạo</label> <input type="date"
+						class="form-control" id="orderCreateDateCreate"
+						style="background-color: white; color: black; width: 100%;"
+						placeholder="dd/mm/yyyy" required>
+				</div>
+				<div class="form-group col-md-6">
+					<label for="inputDate">Ngày giao</label> <input type="date"
+						class="form-control" id="orderDeliveryDateCreate"
+						style="background-color: white; color: black; width: 100%;"
+						placeholder="yyyy/mm/dd" required>
+				</div>
 			</div>
-			
+
 			<div class="form-row">
-			    <div class="form-group col-md-6">
-			      <label for="orderCodeUpdateInput">Mã đơn hàng</label>
-			      <input list="orderCodes" type="text" class="form-control" id="orderCodeInputCreate" style="background-color: white; color: black;" oninput="checkSelectionGoodOrder()">
-			      <datalist id="orderCodes">
-			      	<th:block th:each="orderCode : ${orderCodes}">
-						<option th:value="${orderCode}"></option>			      	
-			      	</th:block>
-			      </datalist>
-			    </div>
-			     <div class="form-group col-md-6">
-				    <label for="goodsType">Loại đơn hàng</label>
-				    <input list="orderCategories" id="orderCategoryCreate" class="form-control" placeholder="Nhập hoặc chọn loại đơn hàng">
-				    <datalist id="orderCategories">
-				        <th:block th:each="orderCategory : ${orderCategories}">
-				            <option th:value="${orderCategory.name}" th:data-id="${orderCategory.id}"></option>
-				        </th:block>
-				    </datalist>
+				<div class="form-group col-md-6">
+					<label for="orderCodeUpdateInput">Mã đơn hàng</label> <input
+						list="orderCodes" type="text" class="form-control"
+						id="orderCodeInputCreate"
+						style="background-color: white; color: black;"
+						oninput="checkSelectionGoodOrder()">
+					<datalist id="orderCodes">
+						<th:block th:each="orderCode : ${orderCodes}">
+							<option th:value="${orderCode}"></option>
+						</th:block>
+					</datalist>
+				</div>
+				<div class="form-group col-md-6">
+					<label for="goodsType">Loại đơn hàng</label> <input
+						list="orderCategories" id="orderCategoryCreate"
+						class="form-control" placeholder="Nhập hoặc chọn loại đơn hàng">
+					<datalist id="orderCategories">
+						<th:block th:each="orderCategory : ${orderCategories}">
+							<option th:value="${orderCategory.name}"
+								th:data-id="${orderCategory.id}"></option>
+						</th:block>
+					</datalist>
 				</div>
 
 			</div>
-	    	
-		    <br/><div class="row2">
-				    <div class="form-row">
-				        <div class="form-group col-md-6">
-						    <label for="goodsType">Loại hàng hóa</label>
-						    <input list="goodsCategories" id="orderGoodsCreate" class="form-control" placeholder="Nhập hoặc chọn loại hàng hóa">
-						    <datalist id="goodsCategories">
-						        <th:block th:each="goodsCategory : ${listGoodsCategories}">
-						            <option th:value="${goodsCategory.name}" th:data-id="${goodsCategory.id}"></option>
-						        </th:block>
-						    </datalist>
-						</div>
 
-				        <div class="form-group col-md-6">
-				            <label for="inputState">Trạng thái</label>
-							<select id="orderStatusCreate" class="form-control select2" style="background-color: white; color: black;" >
-							
-							</select>
-				        </div>
-				    </div>
-		    </div>
-		    
-		    <br/><div class="row2">
-		    	<div class="form-row">
-			        <div class="form-group col-md-6">
-			            <label for="transportMethod">Phương tiện vận chuyển</label>
-			            <input type="text" class="form-control" id="orderTransportCreate" style="background-color: white; color: black;" >
-			        </div>
-			    </div>
-		   		</div>
-		    
-		   <div class="container">
+			<br />
+			<div class="row2">
+				<div class="form-row">
+					<div class="form-group col-md-6">
+						<label for="goodsType">Loại hàng hóa</label> <input
+							list="goodsCategories" id="orderGoodsCreate" class="form-control"
+							placeholder="Nhập hoặc chọn loại hàng hóa">
+						<datalist id="goodsCategories">
+							<th:block th:each="goodsCategory : ${listGoodsCategories}">
+								<option th:value="${goodsCategory.name}"
+									th:data-id="${goodsCategory.id}"></option>
+							</th:block>
+						</datalist>
+					</div>
+
+					<div class="form-group col-md-6">
+						<label for="inputState">Trạng thái</label> <select
+							id="orderStatusCreate" class="form-control select2"
+							style="background-color: white; color: black;">
+
+						</select>
+					</div>
+				</div>
+			</div>
+
+			<br/>
+			<div class="row2">
+				<div class="form-row">
+					<div class="form-group col-md-6">
+						<label for="transportMethod">Phương tiện vận chuyển</label> <input
+							list="transportOptions" id="orderTransportCreate"
+							class="form-control"
+							placeholder="Nhập hoặc chọn phương tiện vận chuyển">
+						<datalist id="transportOptions">
+							<th:block th:each="transport : ${listOrders}">
+								<option th:value="${transport.transportationMethod}"></option>
+							</th:block>
+						</datalist>
+					</div>
+				</div>
+			</div>
+
+			<div class="container">
 				<div class="column">
-				    <fieldset>
-				        <legend>Thông tin người gửi</legend>
-				        <table class="sender-table">
-				            <tr>
-				                <td>Họ tên:</td>
-				                <td>
-				                    <select id="orderSenderNameCreate" class="form-control select2" style="width: 100%; background-color: white; color: black;">
-				                        <option value="" disabled selected>Nhập hoặc chọn tên người gửi</option>
-				                        <th:block th:each="customer : ${listCustomers}">
-				                            <option th:value="${customer.id}" 
-				                                    th:data-phone="${customer.phone}" 
-				                                    th:data-email="${customer.email}">
-				                                <span th:text="${customer.contactPerson}"></span>
-				                            </option>
-				                        </th:block>
-				                    </select>
-				                </td>
-				            </tr>
-				            <tr>
-				                <td>SDT:</td>
-				                <td><input type="text" id="orderSenderPhoneCreate" class="input-container" placeholder="Số điện thoại" readonly style="background-color: white; color: black; width: 100%;" /></td>
-				            </tr>
-				            <tr>
-				                <td>Email:</td>
-				                <td><input type="email" id="orderSenderEmailCreate" class="input-container" placeholder="Email" readonly style="background-color: white; color: black; width: 100%;" /></td>
-				            </tr>
-				        </table>
-				    </fieldset>
-				</div>
-	
-				<div class="column col2">
-				    <fieldset>
-				        <legend>Thông tin người nhận</legend>
-				        <table class="receiver-table">
-				            <tr>
-				                <td>Họ tên:</td>
-				                <td>
-				                    <select id="orderReceiverNameCreate" class="form-control select2" style="width: 100%; background-color: white; color: black;">
-				                        <option value="" disabled selected>Nhập hoặc chọn họ tên</option>
-				                        <th:block th:each="customer : ${listCustomers}">
-				                            <option th:value="${customer.id}" 
-				                                    th:data-phone="${customer.phone}" 
-				                                    th:data-email="${customer.email}">
-				                                <span th:text="${customer.contactPerson}"></span>
-				                            </option>
-				                        </th:block>
-				                    </select>
-				                </td>
-				            </tr>
-				            <tr>
-				                <td>SDT:</td>
-				                <td><input type="text" id="orderReceiverPhoneCreate" class="input-container" placeholder="Số điện thoại" readonly style="background-color: white; color: black; width: 100%;" /></td>
-				            </tr>
-				            <tr>
-				                <td>Email:</td>
-				                <td><input type="email" id="orderReceiverEmailCreate" class="input-container" placeholder="Email" readonly style="background-color: white; color: black; width: 100%;" /></td>
-				            </tr>
-				        </table>
-				    </fieldset>
+					<fieldset>
+						<legend>Thông tin người gửi</legend>
+						<table class="sender-table">
+							<tr>
+								<td>Họ tên:</td>
+								<td><select id="orderSenderNameCreate"
+									class="form-control select2"
+									style="width: 100%; background-color: white; color: black;">
+										<option value="" disabled selected>Nhập hoặc chọn tên
+											người gửi</option>
+										<th:block th:each="customer : ${listCustomers}">
+											<option th:value="${customer.id}"
+												th:data-phone="${customer.phone}"
+												th:data-email="${customer.email}"><span
+													th:text="${customer.contactPerson}"></span>
+											</option>
+										</th:block>
+								</select></td>
+							</tr>
+							<tr>
+								<td>SDT:</td>
+								<td><input type="text" id="orderSenderPhoneCreate"
+									class="input-container" placeholder="Số điện thoại" readonly
+									style="background-color: white; color: black; width: 100%;" /></td>
+							</tr>
+							<tr>
+								<td>Email:</td>
+								<td><input type="email" id="orderSenderEmailCreate"
+									class="input-container" placeholder="Email" readonly
+									style="background-color: white; color: black; width: 100%;" /></td>
+							</tr>
+						</table>
+					</fieldset>
 				</div>
 
-		</div>
-	        
-	        <div class="row2">
-	        	<div class="form-row">
-				        <div class="form-group col-md-6">
-				            <label for="goodsType">Yêu cầu</label>
-				            <div data-mdb-input-init class="form-outline">
-								<textarea class="form-control" id="orderRequirementCreate" rows="8" ></textarea>
-							</div>
-				        </div>
-				        <div class="form-group col-md-6">
-				            <label for="transportMethod">Địa chỉ</label>
-				            <div data-mdb-input-init class="form-outline">
-								<textarea class="form-control" id="orderAddressCreate" rows="8" ></textarea>
-							</div>
-				        </div>
-				    </div>
-	        </div>
-	
-	        <div class="row3">
-				<legend class="legent-row3">Tự động cập nhật qua các kênh</legend>
-				<label><input type="checkbox" id="emailCreate" style="margin-left: 30px; background-color: gray; color: black;"> Email</label>
-				<br><label><input type="checkbox" id="zaloCreate" style="margin-left: 30px; background-color: gray; color: black;"> Zalo</label><span> (+84) 0987654321</span>
-					<a href="#" style="color: #6942ca;"> Thay đổi</a>
-				<br><label><input type="checkbox" id="smsUpdate" style="margin-left: 30px; background-color: gray; color: black;"> SMS</label><span> (+84) 0987654321</span>
-					<a href="#" style="color: #6942ca;"> Thay đổi</a>
+				<div class="column col2">
+					<fieldset>
+						<legend>Thông tin người nhận</legend>
+						<table class="receiver-table">
+							<tr>
+								<td>Họ tên:</td>
+								<td><select id="orderReceiverNameCreate"
+									class="form-control select2"
+									style="width: 100%; background-color: white; color: black;">
+										<option value="" disabled selected>Nhập hoặc chọn họ
+											tên</option>
+										<th:block th:each="customer : ${listCustomers}">
+											<option th:value="${customer.id}"
+												th:data-phone="${customer.phone}"
+												th:data-email="${customer.email}"><span
+													th:text="${customer.contactPerson}"></span>
+											</option>
+										</th:block>
+								</select></td>
+							</tr>
+							<tr>
+								<td>SDT:</td>
+								<td><input type="text" id="orderReceiverPhoneCreate"
+									class="input-container" placeholder="Số điện thoại" readonly
+									style="background-color: white; color: black; width: 100%;" /></td>
+							</tr>
+							<tr>
+								<td>Email:</td>
+								<td><input type="email" id="orderReceiverEmailCreate"
+									class="input-container" placeholder="Email" readonly
+									style="background-color: white; color: black; width: 100%;" /></td>
+							</tr>
+						</table>
+					</fieldset>
+				</div>
+
 			</div>
-		        
+
+			<div class="row2">
+				<div class="form-row">
+					<div class="form-group col-md-6">
+						<label for="goodsType">Yêu cầu</label>
+						<div data-mdb-input-init class="form-outline">
+							<textarea class="form-control" id="orderRequirementCreate"
+								rows="8"></textarea>
+						</div>
+					</div>
+					<div class="form-group col-md-6">
+						<label for="transportMethod">Địa chỉ</label>
+						<div data-mdb-input-init class="form-outline">
+							<textarea class="form-control" id="orderAddressCreate" rows="8"></textarea>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="row3">
+				<legend class="legent-row3">Tự động cập nhật qua các kênh</legend>
+				<label><input type="checkbox" id="emailCreate"
+					style="margin-left: 30px; background-color: gray; color: black;">
+					Email</label> <br> <label><input type="checkbox"
+					id="zaloCreate"
+					style="margin-left: 30px; background-color: gray; color: black;">
+					Zalo</label><span> (+84) 0987654321</span> <a href="#"
+					style="color: #6942ca;"> Thay đổi</a> <br> <label><input
+					type="checkbox" id="smsUpdate"
+					style="margin-left: 30px; background-color: gray; color: black;">
+					SMS</label><span> (+84) 0987654321</span> <a href="#"
+					style="color: #6942ca;"> Thay đổi</a>
+			</div>
+
 			<div class="row4">
 				<button type="button" id="createOrderButton">Lưu</button>
-	        	<button type="button" onclick="closeModal()">Trở về</button>
+				<button type="button" onclick="closeModal()">Trở về</button>
 			</div>
-	    </form>
+		</form>
 	</div>
-	<script type="text/javascript" th:src="@{/resources/js/orders/datatable.js}" ></script>
+	<script type="text/javascript"
+		th:src="@{/resources/js/orders/datatable.js}"></script>
 	<script>
-		$(document).ready(function () {
-		    // Kích hoạt Select2
-		    $('.select2').select2({
-		        tags: true,
-		        placeholder: "Nhập hoặc chọn tên",
-		        allowClear: true
-		    });
-	
-		    // Cập nhật thông tin "Người gửi"
-		    $('#orderSenderNameCreate').on('select2:select', function () {
-		        let selectedOption = $(this).find(':selected');
-		        $('#orderSenderPhoneCreate').val(selectedOption.data('phone') || '');
-		        $('#orderSenderEmailCreate').val(selectedOption.data('email') || '');
-		    });
-	
-		    // Cập nhật thông tin "Người nhận"
-		    $('#orderReceiverNameCreate').on('select2:select', function () {
-		        let selectedOption = $(this).find(':selected');
-		        $('#orderReceiverPhoneCreate').val(selectedOption.data('phone') || '');
-		        $('#orderReceiverEmailCreate').val(selectedOption.data('email') || '');
-		    });
-	
-		    // Xóa thông tin khi giá trị bị xóa
-		    $('#orderSenderNameCreate').on('select2:unselect', function () {
-		        $('#orderSenderPhoneCreate').val('');
-		        $('#orderSenderEmailCreate').val('');
-		    });
-	
-		    $('#orderReceiverNameCreate').on('select2:unselect', function () {
-		        $('#orderReceiverPhoneCreate').val('');
-		        $('#orderReceiverEmailCreate').val('');
-		    });
-		});
+		$(document).ready(
+				function() {
+					// Kích hoạt Select2
+					$('.select2').select2({
+						tags : true,
+						placeholder : "Nhập hoặc chọn tên",
+						allowClear : true
+					});
+
+					// Cập nhật thông tin "Người gửi"
+					$('#orderSenderNameCreate').on(
+							'select2:select',
+							function() {
+								let selectedOption = $(this).find(':selected');
+								$('#orderSenderPhoneCreate').val(
+										selectedOption.data('phone') || '');
+								$('#orderSenderEmailCreate').val(
+										selectedOption.data('email') || '');
+							});
+
+					// Cập nhật thông tin "Người nhận"
+					$('#orderReceiverNameCreate').on(
+							'select2:select',
+							function() {
+								let selectedOption = $(this).find(':selected');
+								$('#orderReceiverPhoneCreate').val(
+										selectedOption.data('phone') || '');
+								$('#orderReceiverEmailCreate').val(
+										selectedOption.data('email') || '');
+							});
+
+					// Xóa thông tin khi giá trị bị xóa
+					$('#orderSenderNameCreate').on('select2:unselect',
+							function() {
+								$('#orderSenderPhoneCreate').val('');
+								$('#orderSenderEmailCreate').val('');
+							});
+
+					$('#orderReceiverNameCreate').on('select2:unselect',
+							function() {
+								$('#orderReceiverPhoneCreate').val('');
+								$('#orderReceiverEmailCreate').val('');
+							});
+				});
 	</script>
 
-	
+
 </body>
 </html>
